# blender-harmonyos-app

./: .gitignore  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
